Added many Stuff
Cad Page
Auto Redirect on 404 page
Auto Lock on encrypted page

--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,14 @@
         <p align="center">
             <a href="index.html" class="button">Home</a>
             <a href="javascript.html" class="button">Javascript</a>
+            <a href="cad.html" class="button">Cad</a>
             <a href="contact.html" class="select">Contact Me</a>
         </p>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <hr style="border: 1px solid black;" />
     </head>
     <body>
-        <p>Unfortunately, GitHub pages only supports static websites, so I have to resort to a third-party option for forms.</p>
+        <p>Unfortunately, GitHub pages only supports static websites, so I am using google forms.</p>
         <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
         <h2>FAQ</h2>
         <p>
