--- a/404.html
+++ b/404.html
@@ -8,14 +8,16 @@
         <p align="center">
             <a href="index.html" class="button">Home</a>
             <a href="javascript.html" class="button">Javascript</a>
+            <a href="cad.html" class="button">Cad</a>
             <a href="contact.html" class="button">Contact Me</a>
         </p>
         <hr style="border: 1px solid black;" />
     </head>
     <body>
         <h1>Error 404</h1>
-        <p>Oh No! You went somewhere that doesn't exist. But that's ok. Just click on a navigation option on top. In the mean time, check out this picture of a cat!</p>
+        <p>Oh No! You went somewhere that doesn't exist. But that's ok. Just click on a navigation option on top. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 5 seconds.</strong></p>
         <img src="media/cat.jpg" alt="Cat with different colored eyes" style="width:500px;height:400px;" class="center">
+        <meta http-equiv="refresh" content="5; url=index.html">
     </body>
     <footer>
         <hr style="border: 1px solid black;" />
