--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <p align="center">
             <a href="index.html" class="select">Home</a>
             <a href="javascript.html" class="button">Javascript</a>
+            <a href="cad.html" class="button">Cad</a>
             <a href="contact.html" class="button">Contact Me</a>
         </p>
         <hr style="border: 1px solid black;" />
