--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
         <p align="center">
-            <a href="index.html" class="button">Home</a>
-            <a href="javascript.html" class="button">Javascript</a>
-            <a href="cad.html" class="button">Cad</a>
+            <a href="index.html" class="menu">Home</a>
+            <a href="javascript.html" class="menu">Javascript</a>
+            <a href="cad.html" class="menu">Cad</a>
             <a href="contact.html" class="select">Contact Me</a>
         </p>
         <link rel="stylesheet" type="text/css" href="css/main.css">
