--- a/javascript.html
+++ b/javascript.html
@@ -6,10 +6,10 @@
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
         <p align="center">
-            <a href="index.html" class="button">Home</a>
+            <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="select">Javascript</a>
-            <a href="cad.html" class="button">Cad</a>
-            <a href="contact.html" class="button">Contact Me</a>
+            <a href="cad.html" class="menu">Cad</a>
+            <a href="contact.html" class="menu">Contact Me</a>
         </p>
         <hr style="border: 1px solid black;" />
     </head>
@@ -20,6 +20,17 @@
         <p> 
         <canvas id="mycanvas"></canvas> 
         </p>
+        <h2>Javascript Functions I Wrote</h2>
+        <p>Here is a list of functions I wrote. Some of them will need processing js in order to work.</p>
+        <h3>Gradient Maker</h3>
+        <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
+        <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color.<br><strong>How to use it</strong><br>Use the function with this code: <u>gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</u>
+        </p>
+        <ol>
+            <li>Test</li>
+
+        </ol>
+
         <p>If you would like to see a bunch of random messy projects I made in javascript, please see my <a href="https://www.khanacademy.org/profile/Timcraftmine/projects" target="_blank">Khan Academy Profile</a>. It's very clutered with random stuff and projects that don't work, so be careful. (also some projects say "WIP" (stands for 'Work in Progress'), but I'm not planning to go back to them anytime soon right now lol).</p>
     </body>
     <footer>
