--- a/cad.html
+++ b/cad.html
@@ -6,10 +6,10 @@
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
         <p align="center">
-            <a href="index.html" class="button">Home</a>
-            <a href="javascript.html" class="button">Javascript</a>
+            <a href="index.html" class="menu">Home</a>
+            <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="select">Cad</a>
-            <a href="contact.html" class="button">Contact Me</a>
+            <a href="contact.html" class="menu">Contact Me</a>
         </p>
         <hr style="border: 1px solid black;" />
     </head>
