--- a/javascript.html
+++ b/javascript.html
@@ -27,7 +27,21 @@
         <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color.<br><strong>How to use it</strong><br>Use the function with this code: <u>gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</u>
         </p>
         <ol>
-            <li>Test</li>
+            <li><strong>type</strong></li>
+            <ul>Select what shape you want your gradient to be (must be placed in quotes):
+                <li>Horizontal: A rectangle with a gradient going from left to right.</li>
+                <li>Vertical: A rectangle with a gradient going from top to bottom.</li>
+                <li>Central: A rectangle with a gradient going from outside to inside.</li>
+                <li>Ellipse: An ellipse with a gradient going from outside to inside.</li>
+            </ul>
+            <li><strong>x,y</strong></li>
+            <ul>The x and y coordinate in the top left corner.</ul>
+            <li><strong>width,height</strong></li>
+            <ul>The width and height of the shape.</ul>
+            <li><strong>startR,startG,startB</strong></li>
+            <ul>The start color of the gradient in rgb</ul>
+            <li><strong>endR,endG,endB</strong></li>
+            <ul>The end color of the gradient in rgb</ul>
 
         </ol>
 
