--- a/javascript.html
+++ b/javascript.html
@@ -11,7 +11,7 @@
             <a href="cad.html" class="menu">Cad</a>
             <a href="contact.html" class="menu">Contact Me</a>
         </p>
-        <hr style="border: 1px solid black;" />
+        <hr style="border: 3px solid black;" />
     </head>
     <body>
         <p>I also know how to code some javascript.</p>
@@ -24,8 +24,7 @@
         <p>Here is a list of functions I wrote. Some of them will need processing js in order to work.</p>
         <h3>Gradient Maker</h3>
         <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
-        <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color.<br><strong>How to use it</strong><br>Use the function with this code: <u>gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</u>
-        </p>
+        <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color. Requires Processing JS.<br>Use the function with this code: gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</p>
         <ol>
             <li><strong>type</strong></li>
             <ul>Select what shape you want your gradient to be (must be placed in quotes):
@@ -42,13 +41,32 @@
             <ul>The start color of the gradient in rgb</ul>
             <li><strong>endR,endG,endB</strong></li>
             <ul>The end color of the gradient in rgb</ul>
-
+        </ol>
+        <h3>Grid Maker NOT DONE</h3>
+        <center><a href="code/gridfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
+        <p>This function can draw a rectangular grid. Requires Processing JS.<br>Use the function with this code: grid(x,y,width,height,xSpace,ySpace</p>
+        <ol>
+            <li><strong>type</strong></li>
+            <ul>Select what shape you want your gradient to be (must be placed in quotes):
+                <li>Horizontal: A rectangle with a gradient going from left to right.</li>
+                <li>Vertical: A rectangle with a gradient going from top to bottom.</li>
+                <li>Central: A rectangle with a gradient going from outside to inside.</li>
+                <li>Ellipse: An ellipse with a gradient going from outside to inside.</li>
+            </ul>
+            <li><strong>x,y</strong></li>
+            <ul>The x and y coordinate in the top left corner.</ul>
+            <li><strong>width,height</strong></li>
+            <ul>The width and height of the shape.</ul>
+            <li><strong>startR,startG,startB</strong></li>
+            <ul>The start color of the gradient in rgb</ul>
+            <li><strong>endR,endG,endB</strong></li>
+            <ul>The end color of the gradient in rgb</ul>
         </ol>
 
         <p>If you would like to see a bunch of random messy projects I made in javascript, please see my <a href="https://www.khanacademy.org/profile/Timcraftmine/projects" target="_blank">Khan Academy Profile</a>. It's very clutered with random stuff and projects that don't work, so be careful. (also some projects say "WIP" (stands for 'Work in Progress'), but I'm not planning to go back to them anytime soon right now lol).</p>
     </body>
     <footer>
-        <hr style="border: 1px solid black;" />
+        <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
         <a href="encrypted.html">Secret Information</a><br><br>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
