--- a/404.html
+++ b/404.html
@@ -15,9 +15,9 @@
     </head>
     <body>
         <h1>Error 404</h1>
-        <p>Oh No! You went somewhere that doesn't exist. But that's ok. Just click on a navigation option on top. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 5 seconds.</strong></p>
+        <p>Uh-oh! You went somewhere that doesn't exist. In the mean time, check out this picture of a cat!<br><strong>You will redirected to the homepage in 10 seconds.</strong></p>
         <img src="media/cat.jpg" alt="Cat with different colored eyes" style="width:500px;height:400px;" class="center">
-        <meta http-equiv="refresh" content="5; url=index.html">
+        <meta http-equiv="refresh" content="10; url=index.html">
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
