--- a/javascript.html
+++ b/javascript.html
@@ -14,7 +14,7 @@
         <hr style="border: 3px solid black;" />
     </head>
     <body>
-        <p>I also know how to code some javascript.</p>
+        <p>Here is a collection of things I have done in Javascript.</p>
         <h2>Sun Setting</h2>
         <p>Here is a project I coded on Khan Academy, where you can program using javascript and processing js. I coded it to have the sun start at the top then slowly move to the bottom as the background color slowly changes to simulate a sunset.</p>
         <p> 
@@ -42,28 +42,19 @@
             <li><strong>endR,endG,endB</strong></li>
             <ul>The end color of the gradient in rgb</ul>
         </ol>
-        <h3>Grid Maker NOT DONE</h3>
+        <h3>Grid Maker</h3>
         <center><a href="code/gridfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
-        <p>This function can draw a rectangular grid. Requires Processing JS.<br>Use the function with this code: grid(x,y,width,height,xSpace,ySpace</p>
+        <p>This function can draw a rectangular grid. Requires Processing JS.<br>Use the function with this code: grid(x,y,width,height,xSpace,ySpace)</p>
         <ol>
-            <li><strong>type</strong></li>
-            <ul>Select what shape you want your gradient to be (must be placed in quotes):
-                <li>Horizontal: A rectangle with a gradient going from left to right.</li>
-                <li>Vertical: A rectangle with a gradient going from top to bottom.</li>
-                <li>Central: A rectangle with a gradient going from outside to inside.</li>
-                <li>Ellipse: An ellipse with a gradient going from outside to inside.</li>
-            </ul>
             <li><strong>x,y</strong></li>
-            <ul>The x and y coordinate in the top left corner.</ul>
+            <ul>The x and y coordinate of the top left of the grid.</ul>
             <li><strong>width,height</strong></li>
-            <ul>The width and height of the shape.</ul>
-            <li><strong>startR,startG,startB</strong></li>
-            <ul>The start color of the gradient in rgb</ul>
-            <li><strong>endR,endG,endB</strong></li>
-            <ul>The end color of the gradient in rgb</ul>
+            <ul>The width and height of the grid.</ul>
+            <li><strong>xSpace,ySpace</strong></li>
+            <ul>The spacing between the lines in the grid starting at the top left.</ul>
         </ol>
-
-        <p>If you would like to see a bunch of random messy projects I made in javascript, please see my <a href="https://www.khanacademy.org/profile/Timcraftmine/projects" target="_blank">Khan Academy Profile</a>. It's very clutered with random stuff and projects that don't work, so be careful. (also some projects say "WIP" (stands for 'Work in Progress'), but I'm not planning to go back to them anytime soon right now lol).</p>
+        <p>To change the color and thickness of the grid, use the stroke, strokeWeight, and fill functions.</p>
+        <br><p>If you would like to see a bunch of random messy projects I made in javascript, please see my <a href="https://www.khanacademy.org/profile/Timcraftmine/projects" target="_blank">Khan Academy Profile</a>. It's very clutered with random stuff and projects that don't work, so be careful. (also some projects say "WIP" (stands for 'Work in Progress'), but I'm not planning to go back to them anytime soon right now lol).</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
