Updated Menu Bar
Figured out why the website shifts on index page (bc the scroll bar forces the whole thing to get pushed over).

--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,16 @@
         <link rel="icon" type="image/png" href="media/favicon.png"/>
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
-        <p align="center">
+        <div class='menubar'><p align="center">
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
             <a href="contact.html" class="select">Contact Me</a>
-        </p>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <hr style="border: 3px solid black;" />
+        </p></div>
     </head>
     <body>
         <p>Unfortunately, GitHub pages only supports static websites, so I am using google forms.</p>
-        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Contact Form Loading…</iframe></center>
         <h2>FAQ</h2>
         <p>
             <strong>What is the passphrase to the Secret Information page?</strong><br>
