--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
         <link rel="icon" type="image/png" href="media/favicon.png"/>
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
-        <p align="center">
+        <div class='menubar'><p align="center">
             <a href="index.html" class="select">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
             <a href="contact.html" class="menu">Contact Me</a>
-        </p>
-        <hr style="border: 3px solid black;" />
+        </p></div>
     </head>
     <body>
         <h1>Hello</h1>
-        <p>Welcome to my website. This is where I will write different things I hve done. This website was coded mainly with HTML with a few other languages like Javascript. This website is hosted with github pages.</p>
-        <ol><strong>4 Things I Like:</strong>
+        <p>Welcome to my website. This is where I will write different things I hve done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
+        <ol><strong>6 Things I Like:</strong>
             <li>Rock Climbing</li>
             <li>Minecraft</li>
             <li>Cad</li>
             <li>Programming</li>
+            <li>Sleeping</li>
+            <li>Sushi</li>
         </ol>
     </body>
     <footer>
