--- a/404.html
+++ b/404.html
@@ -5,13 +5,12 @@
         <link rel="icon" type="image/png" href="media/favicon.png"/>
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
-        <p align="center">
+        <div class='menubar'><p align="center">
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
             <a href="contact.html" class="menu">Contact Me</a>
-        </p>
-        <hr style="border: 3px solid black;" />
+        </p></div>
     </head>
     <body>
         <h1>Error 404</h1>
