--- a/cad.html
+++ b/cad.html
@@ -5,13 +5,12 @@
         <link rel="icon" type="image/png" href="media/favicon.png"/>
         <title>Home - Timothy's Showcase</title> 
         <h1>Timothy's Showcase</h1>
-        <p align="center">
+        <div class='menubar'><p align="center">
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="select">Cad</a>
             <a href="contact.html" class="menu">Contact Me</a>
-        </p>
-        <hr style="border: 3px solid black;" />
+        </p></div>
     </head>
     <body>
         <p>I am a team member of the PCA Robotics team, where my main role is to design the robot with cad, or computer aided design. I also like designing other stuff in my free time. Below are images of things I designed in Cad.</p>
