--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
+            <a href="school.html" class="menu">School</a>
             <a href="contact.html" class="menu">Contact Me</a>
         </p></div>
     </head>
