--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             <a href="index.html" class="select">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
+            <a href="school.html" class="menu">School</a>
             <a href="contact.html" class="menu">Contact Me</a>
         </p></div>
     </head>
     <body>
-        <h1>Hello</h1>
         <p>Welcome to my website. This is where I will write different things I hve done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
         <ol><strong>6 Things I Like:</strong>
             <li>Rock Climbing</li>
