--- a/javascript.html
+++ b/javascript.html
@@ -9,6 +9,7 @@
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="select">Javascript</a>
             <a href="cad.html" class="menu">Cad</a>
+            <a href="school.html" class="menu">School</a>
             <a href="contact.html" class="menu">Contact Me</a>
         </p></div>
     </head>
@@ -22,7 +23,7 @@
         <h2>Javascript Functions I Wrote</h2>
         <p>Here is a list of functions I wrote. Some of them will need processing js in order to work.</p>
         <h3>Gradient Maker</h3>
-        <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
+        <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Get the Code</a></center>
         <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color. Requires Processing JS.<br>Use the function with this code: gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</p>
         <ol>
             <li><strong>type</strong></li>
@@ -42,7 +43,7 @@
             <ul>The end color of the gradient in rgb</ul>
         </ol>
         <h3>Grid Maker</h3>
-        <center><a href="code/gridfunction.mjs" class="button" target="_blank">Copy the Code</a></center>
+        <center><a href="code/gridfunction.mjs" class="button" target="_blank">Get the Code</a></center>
         <p>This function can draw a rectangular grid. Requires Processing JS.<br>Use the function with this code: grid(x,y,width,height,xSpace,ySpace)</p>
         <ol>
             <li><strong>x,y</strong></li>
