--- a/javascript.html
+++ b/javascript.html
@@ -3,26 +3,26 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Home - Timothy's Showcase</title> 
-        <h1>Timothy's Showcase</h1>
-        <div class='menubar'><p align="center">
+        <title>Javascript - Timothy's Showcase</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <div class='menubar'><p>
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="select">Javascript</a>
-            <a href="cad.html" class="menu">Cad</a>
+            <a href="cad.html" class="menu">CAD</a>
+            <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="menu">School</a>
-            <a href="contact.html" class="menu">Contact Me</a>
         </p></div>
     </head>
     <body>
         <p>Here is a collection of things I have done in Javascript.</p>
-        <h2>Sun Setting</h2>
+        <h1>Sun Setting</h1>
         <p>Here is a project I coded on Khan Academy, where you can program using javascript and processing js. I coded it to have the sun start at the top then slowly move to the bottom as the background color slowly changes to simulate a sunset.</p>
         <p> 
         <canvas id="mycanvas"></canvas> 
         </p>
-        <h2>Javascript Functions I Wrote</h2>
+        <h1>Javascript Functions I Wrote</h1>
         <p>Here is a list of functions I wrote. Some of them will need processing js in order to work.</p>
-        <h3>Gradient Maker</h3>
+        <h2>Gradient Maker</h2>
         <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Get the Code</a></center>
         <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color. Requires Processing JS.<br>Use the function with this code: gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</p>
         <ol>
@@ -42,7 +42,7 @@
             <li><strong>endR,endG,endB</strong></li>
             <ul>The end color of the gradient in rgb</ul>
         </ol>
-        <h3>Grid Maker</h3>
+        <h2>Grid Maker</h2>
         <center><a href="code/gridfunction.mjs" class="button" target="_blank">Get the Code</a></center>
         <p>This function can draw a rectangular grid. Requires Processing JS.<br>Use the function with this code: grid(x,y,width,height,xSpace,ySpace)</p>
         <ol>
@@ -59,7 +59,10 @@
     <footer>
         <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <a href="encrypted.html">Secret Information</a><br><br>
+        <p>
+            <a href="encrypted.html" class="button">Secret Information</a>
+            <a href="contact.html" class="button">Contact Me</a>
+        </p>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </footer>
  
