--- a/templete.html
+++ b/templete.html
@@ -4,25 +4,16 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
         <title>Home - Timothy's Showcase</title> 
-        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <h1>Timothy's Showcase</h1>
         <div class='menubar'><p>
-            <a href="index.html" class="select">Home</a>
+            <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
+            <a href="cad.html" class="menu">Cad</a>
             <a href="school.html" class="menu">School</a>
         </p></div>
     </head>
     <body>
-        <p>Welcome to my website. This is where I will write different things I hve done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <p>This is some text</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
