--- a/videogames.html
+++ b/videogames.html
@@ -3,26 +3,22 @@
     <head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Home - Timothy's Showcase</title> 
+        <title>Video Games - Timothy's Showcase</title> 
         <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
         <div class='menubar'><p>
-            <a href="index.html" class="select">Home</a>
+            <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
             <a href="cad.html" class="menu">CAD</a>
-            <a href="videogames.html" class="menu">Video Games</a>
+            <a href="videogames.html" class="select">Video Games</a>
             <a href="school.html" class="menu">School</a>
         </p></div>
     </head>
     <body>
-        <p>Welcome to my website. This is where I will write different things I hve done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
-        <ol><strong>6 Things I Like:</strong>
-            <li>Rock Climbing</li>
-            <li>Minecraft</li>
-            <li>CAD</li>
-            <li>Programming</li>
-            <li>Sleeping</li>
-            <li>Sushi</li>
-        </ol>
+        <p>I play video games. Here is a list of some of them.</p>
+        <h1>Minecraft</h1>
+        <p>Minecraft is one of the best video games because there are so many possibilities. In survial, there are so many ways to defeat the game, and in creative there are so many different things you can do. You can even play with friends on servers with classic minecraft, or with added mods. Here are things I have done in Minecraft.</p>
+        <h2>Hypixel Skyblock</h2>
+        <p>Hypixel took a very unique take on the classic minecraft game skyblock. You have an island where you can farm items, build structures, and store items, but you also have a portal to a world with infinite resources, shops with a currency system, and much more. There's many custom items, custom mobs, custom quests, and many more features that make this game very unique.</p>
     </body>
     <footer>
         <hr style="border: 3px solid black;" />
