--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Home - Timothy's Showcase</title> 
-        <h1>Timothy's Showcase</h1>
-        <div class='menubar'><p align="center">
+        <title>Contact Me - Timothy's Showcase</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <div class='menubar'><p>
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">Cad</a>
+            <a href="cad.html" class="menu">CAD</a>
+            <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="menu">School</a>
-            <a href="contact.html" class="select">Contact Me</a>
         </p></div>
     </head>
     <body>
@@ -26,7 +26,10 @@
     <footer>
         <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <a href="encrypted.html">Secret Information</a><br><br>
+        <p>
+            <a href="encrypted.html" class="button">Secret Information</a>
+            <a href="contact.html" class="button">Contact Me</a>
+        </p>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </footer>
 </html>
