--- a/school.html
+++ b/school.html
@@ -3,21 +3,36 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png"/>
-        <title>Home - Timothy's Showcase</title> 
-        <h1>Timothy's Showcase</h1>
-        <div class='menubar'><p align="center">
+        <title>School - Timothy's Showcase</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
+        <div class='menubar'><p>
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">Cad</a>
+            <a href="cad.html" class="menu">CAD</a>
+            <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="select">School</a>
-            <a href="contact.html" class="menu">Contact Me</a>
         </p></div>
     </head>
     <body>
         <p>Hello again. Here is a collection of things that are part of school. Below you can find different stories I wrote for english class, my favorite tools for school, and more.</p>
-        <h2>Stories</h2>
+        <h1>Math Tools</h1>
+        <h2>Favorite Calculator: <a href="https://www.desmos.com/calculator" Target="_blank">Desmos Graphing Calculator</a></h2>
+        <ul><strong>Pros</strong>
+            <li>Contains Many Functions.</li>
+            <li>Autmoatically Graphs Equations.</li>
+            <li>Variables can be set to change numbers (slowly increase/decrease) allowing your graphs to move.</li>
+            <li>There are folders to organize all your functions. This is useful if you are making a drawing with math and while doing math to sort your equations by question number.</li>
+            <li>You can create an account to save all your graphs.</li>
+            <li>There are mobile apps so you can graph and calculate on the go.</li>
+        </ul>
+        <ul><strong>Cons</strong>
+            <li>Triginometry functions seem to be broken (maybe I'm using it wrong, please tell me if that is so).</li>
+            <li>Saved graphs just appear in one long list, so for me it can be a little cluttered.</li>
+        </ul>
+        <p>Overall this is my favorite calculator for school and fun stuff like <a href="https://www.desmos.com/calculator/me6m2mqmy8" target="_blank">this</a>. I would highly recommend this calculator to everyone.</p>
+        <h1>Literature</h1>
         <p>Just so you know writing is not my best subject. The date is when I submited the story to my teacher.</p>
-        <h3>The School Robbery - 3/13/2020</h3>
+        <h2>The School Robbery - 3/13/2020</h2>
         <p class="story">
             It was the last day of Summer. Richard and I were sad that school would start tomorrow, even though that summer was somewhat boring. Then Richard came up with a brilliant plan.
         </p><p class="story">
@@ -30,7 +45,7 @@
         </p><p class="story">
             The next day, I went to school. Richard and I were waiting to be told that school was canceled, but school went on like normal. But because we hid all of the school supplies, school was less engaging. It was just a lot of talking the whole day.
         </p>
-        <h3>Prison - 11/14/2019</h3>
+        <h2>Prison - 11/14/2019</h2>
         <p>
             One night in my prison cell, I felt a little ill.<br>
             It felt dark, depressing, daunting, maybe even dead.<br>
@@ -56,7 +71,10 @@
     <footer>
         <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
-        <a href="encrypted.html">Secret Information</a><br><br>
+        <p>
+            <a href="encrypted.html" class="button">Secret Information</a>
+            <a href="contact.html" class="button">Contact Me</a>
+        </p>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </footer>
 </html>
