--- a/comment.html
+++ b/comment.html
@@ -3,18 +3,21 @@
     <head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" type="image/png" href="media/favicon.png">
-        <title>Home - Timothy's Showcase</title> 
-        <h1>Timothy's Showcase</h1>
+        <title>Comment - Timothy's Showcase</title> 
+        <h1 class="title"><a href="index.html" class="title">Timothy's Showcase</a></h1>
         <div class='menubar'><p>
             <a href="index.html" class="menu">Home</a>
             <a href="javascript.html" class="menu">Javascript</a>
-            <a href="cad.html" class="menu">Cad</a>
+            <a href="cad.html" class="menu">CAD</a>
+            <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="menu">School</a>
+            <a href="comment.html" class="select">Comment</a>
         </p></div>
     </head>
     <body>
-        <p>This is some text</p>
-    </body>
+       <p>The comment system uses google forms and google sheets in order to work.</p>
+       <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScndgqclxgitll9wxLpvXnK6Gt2uvxGSnBzyLevRCpDAPeOdA/viewform?embedded=true" width="640" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+       <center><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRGmdm0fn-RUSto5I5Vd9tuocP8q4OKvAbz7phllLAa4XFwDpQEfVybWY_P-3SFWHWsNPMND_l4u17l/pubhtml?gid=325637427&amp;single=true&amp;widget=true&amp;headers=false" width="800" height="500"></iframe></center>
     <footer>
         <hr style="border: 3px solid black;" />
         <p><strong>Note: </strong>This site is still under development. The website may contain glitches, and information may not be accurate.</p>
