--- a/javascript.html
+++ b/javascript.html
@@ -11,6 +11,7 @@
             <a href="cad.html" class="menu">CAD</a>
             <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="menu">School</a>
+            <a href="comment.html" class="menu">Comment</a>
         </p></div>
     </head>
     <body>
@@ -24,7 +25,7 @@
         <p>Here is a list of functions I wrote. Some of them will need processing js in order to work.</p>
         <h2>Gradient Maker</h2>
         <center><a href="code/gradientfunction.mjs" class="button" target="_blank">Get the Code</a></center>
-        <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color. Requires Processing JS.<br>Use the function with this code: gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</p>
+        <p>This functions can draw rectangles and ellipses with gradents to color them instead of a solid color. This is also the function that is being used to draw the sun setting animation above. Requires Processing JS.<br>Use the function with this code: gradient(type,x,y,width,height,startR,startG,startB,endR,endG,endB)</p>
         <ol>
             <li><strong>type</strong></li>
             <ul>Select what shape you want your gradient to be (must be placed in quotes):
