--- a/school.html
+++ b/school.html
@@ -11,6 +11,7 @@
             <a href="cad.html" class="menu">CAD</a>
             <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="select">School</a>
+            <a href="comment.html" class="menu">Comment</a>
         </p></div>
     </head>
     <body>
@@ -26,7 +27,6 @@
             <li>There are mobile apps so you can graph and calculate on the go.</li>
         </ul>
         <ul><strong>Cons</strong>
-            <li>Triginometry functions seem to be broken (maybe I'm using it wrong, please tell me if that is so).</li>
             <li>Saved graphs just appear in one long list, so for me it can be a little cluttered.</li>
         </ul>
         <p>Overall this is my favorite calculator for school and fun stuff like <a href="https://www.desmos.com/calculator/me6m2mqmy8" target="_blank">this</a>. I would highly recommend this calculator to everyone.</p>
