--- a/videogames.html
+++ b/videogames.html
@@ -11,6 +11,7 @@
             <a href="cad.html" class="menu">CAD</a>
             <a href="videogames.html" class="select">Video Games</a>
             <a href="school.html" class="menu">School</a>
+            <a href="comment.html" class="menu">Comment</a>
         </p></div>
     </head>
     <body>
