--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
             <a href="cad.html" class="menu">CAD</a>
             <a href="videogames.html" class="menu">Video Games</a>
             <a href="school.html" class="menu">School</a>
+            <a href="comment.html" class="menu">Comment</a>
         </p></div>
     </head>
     <body>
-        <p>Unfortunately, GitHub pages only supports static websites, so I am using google forms.</p>
+        <p>Use this form if you need to contact me in private, such as for copyright infringement, a glitch you found, etc. If you want to say a general comment, like just saying that the website is fun, please use <a href="comment.html">the comments</a>.</p>
         <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2cff9E9l8BbsmpA6j5wDi2_MSfpWrG0cFoaS-WIYo8q3O9g/viewform?embedded=true" width="640" height="459" frameborder="0" marginheight="0" marginwidth="0">Contact Form Loading…</iframe></center>
         <h2>FAQ</h2>
         <p>
