Added New Story
To School "Climb Through the Storm"

--- a/school.html
+++ b/school.html
@@ -45,6 +45,58 @@
         </p><p class="story">
             The next day, I went to school. Richard and I were waiting to be told that school was canceled, but school went on like normal. But because we hid all of the school supplies, school was less engaging. It was just a lot of talking the whole day.
         </p>
+        <h2>Climb Through the Storm - 2/26/2020</h2>
+        <p class="story">
+            Henry and David were neighbors on summer vacation. They were both very adventurous, and both decided to go rock climbing during the summer. They drove to the base of a mountain, grabbed their gear and started climbing.
+        </p><p class="story">
+            “The weather is really nice today.” Henry said. “Perfect for climbing in.”
+        </p><p class="story"> 
+            They continued their way up. Around halfway up the mountain, the weather started to turn sour.
+        </p><p class="story">
+            “Should we lower down the mountain?” David was getting worried. “The weather is starting to get bad.”
+        </p><p class="story">
+            “It should be fine.” Henry reassured. “It’s only a little rain and wind.”
+        </p><p class="story">
+            But around three quarters of the way up, the weather became stronger. The two were drenched in rain, and were being tossed around in their ropes.
+        </p><p class="story">
+            “We better go down the mountain now.” David urged.
+        </p><p class="story">
+            “I think that would be a good idea.” Henry agreed. “It is almost impossible to continue climbing now.”
+        </p><p class="story">
+            As they started lowering themselves, the air became foggy and cold. It became impossible to see more than a few feet down. Their rock climbing gear became icy and frozen making them hard to use. The howling wind blew them around like a rodeo. Then David’s rope snapped. He started to fall and scream. Thankfully, he caught onto a branch.
+        </p><p class="story">
+            “Help me!” David shouted. “I’m losing my grip!”
+        </p><p class="story">
+            Henry started lowering toward David. But Henry ran out of rope, and started falling. He grabbed onto a nearby branch. The two of them were now next to each other, separated by a few feet.
+        </p><p class="story">
+            “I am not tied into the rope anymore!” Henry yelled.
+        </p><p class="story">
+            “What do we do? If we fall off we will probably die.”
+        </p><p class="story">
+            Henry kicked the rock with his foot, and felt a ledge to stand. He pulled himself to the ledge. “David! There’s a ledge over here! We can stand on it until the weather clears up.”
+        </p><p class="story">
+            “How will I get over there? I can barely see anything.”
+        </p><p class="story">
+            “Place your feet on the wall and try to climb toward me. Once you get closer, I’ll pull you in.”
+        </p><p class="story">
+            “Pull me?” David questioned. “You can barely hold yourself. How will you pull me?”
+        </p><p class="story">
+            “Just trust me,” Henry reassured. “Besides, you’ll fall if you just stay there.”
+        </p><p class="story">
+            David slowly pulled himself to the wall. The wind kept pushing against him, trying to blow him off. As he climbed toward the ledge, his foot slipped, and he almost fell.
+        </p><p class="story">
+            “Don’t rush!” Henry cautioned. “Go slowly!”
+        </p><p class="story">
+            David didn’t talk, focusing on stepping in the right places.
+        </p><p class="story">
+            “I can reach you now! I’m going to grab your arm” Henry reached out.
+        </p><p class="story">
+            “Pull me in now!” David shouted.
+        </p><p class="story">
+            Henry tried to pull him in, while trying not to fall off at the same time. David eventually crashed into the mountain face, and the both sat on the ledge. They were both exhausted but relieved. The two of them dozed off while waiting for the weather to clear.
+        </p><p class="story">
+            After around an hour, the fog cleared, and the rain and wind died down. A splendid rainbow formed in the sky. Henry and David woke up and looked down. They were only five feet above the ground.
+        </p>
         <h2>Prison - 11/14/2019</h2>
         <p>
             One night in my prison cell, I felt a little ill.<br>
