--- a/comment.html
+++ b/comment.html
@@ -15,7 +15,7 @@
         </p></div>
     </head>
     <body>
-       <p>The comment system uses google forms and google sheets in order to work.</p>
+       <p>The comment system uses google forms and google sheets in order to work. Also note that once the comments is approved it may take up to 5 minutes to update.</p>
        <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScndgqclxgitll9wxLpvXnK6Gt2uvxGSnBzyLevRCpDAPeOdA/viewform?embedded=true" width="640" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
        <center><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRGmdm0fn-RUSto5I5Vd9tuocP8q4OKvAbz7phllLAa4XFwDpQEfVybWY_P-3SFWHWsNPMND_l4u17l/pubhtml?gid=325637427&amp;single=true&amp;widget=true&amp;headers=false" width="800" height="500"></iframe></center>
     <footer>
