--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p></div>
     </head>
     <body>
-        <p>Welcome to my website. This is where I will write different things I hve done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
+        <p>Welcome to my website. This is where I will write different things I have done. This website was coded with HTML, CSS, and Javascript without the use of a drag-and-drop editor. This website is hosted with github pages.</p>
         <ol><strong>6 Things I Like:</strong>
             <li>Rock Climbing</li>
             <li>Minecraft</li>
